src/objects/Cobject__c.object
<CustomObject>
    <fields>
        <fullName>Aobject_MD__c</fullName>
        <label>Aobject MD</label>
        <referenceTo>Aobject__c</referenceTo>
        <relationshipLabel>Cobjects</relationshipLabel>
        <relationshipName>Cobjects</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Bobject_MD__c</fullName>
        <label>Bobject MD</label>
        <referenceTo>Bobject__c</referenceTo>
        <relationshipLabel>Cobjects</relationshipLabel>
        <relationshipName>Cobjects</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Name__c</fullName>
        <label>Name</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <label>Cobject</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>C-{00}</displayFormat>
        <label>Cobject Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Cobjects</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>